--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myFirstApp">
   <head>
     <meta charset="utf-8">
-    <title>Hello Coursera</title>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+    <title>My first AngularJS App</title>
   </head>
   <body>
-    <h1>
-      Hello Coursera Students!
-      Welcome
-    </h1>
+    <h1>My first Angularjs App</h1>
+    <div ng-controller="MyFirstController">
+      {{name}}
+    </div>
   </body>
 </html>
