--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="utf-8">
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
-    <title>My first AngularJS App</title>
+    <title>Name Calculator</title>
   </head>
-  <body>
-    <h1>My first Angularjs App</h1>
-    <div ng-controller="MyFirstController">
-      <input type="text" ng-model="name">
-      Inside my input is"{{name}}
+  <body ng-app="NameCalculator">
+    <h1>Name Calculator</h1>
+    <div ng-controller="NameCalculatorController">
+      <div>
+        Your Name:
+      <input type="text"
+      ng-model="name"
+      ng-keyup="displayNumeric();">
     </div>
+    <div>Total Numeric Value of name:{{totalValue}}</div>
   </body>
 </html>
