--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       ng-model="name"
       ng-keyup="displayNumeric();">
     </div>
-    <div>Total Numeric Value of name:{{totalValue}}</div>
+    <div>Total Numeric Value of person's name:
+      {{totalValue}} </div>
   </body>
 </html>
