--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html  ng-app="LunchCheck">
   <head>
+    <meta charset="utf-8">
+    <script src="angular.min.js"></script>
+    <script <src="app.js"></script>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
@@ -11,7 +14,7 @@
 <body>
    <div class="container">
      <h1>Lunch Checker</h1>
-
+          <div ng-controller="LunchCheckerController"></div>
          <div class="form-group">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
@@ -20,6 +23,7 @@
          <div class="form-group">
              <button class="btn btn-default">Check If Too Much</button>
          </div>
+         <div id="error msg"></div>
          <div class="form-group message">
            <!-- Your message can go here. -->
          </div>
