--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
              <button class="btn btn-default">Check If Too Much</button>
          </div>
          <div id="error msg"></div>
+         Message of Lunch Checker is:{{foodcount}}
          <div class="form-group message">
            <!-- Your message can go here. -->
          </div>
