--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
    <div class="container">
      <h1>Lunch Checker</h1>
-          <div ng-controller="LunchCheckerController">
+          <div ng-controller="LunchCheckController">
               Message of Lunch Checker is:{{foodcount}}</div>
          <div class="form-group">
              <input id="lunch-menu" type="text"
