--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
-<!doctype html>
-<html  ng-app="LunchCheck">
-  <head>
-    <meta charset="utf-8">
-    <script src="angular.min.js"></script>
-    <script <src="app.js"></script>
-    <title>Lunch Checker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <style>
-      .message { font-size: 1.3em; font-weight: bold; }
-    </style>
-  </head>
-<body>
-   <div class="container">
-     <h1>Lunch Checker</h1>
-          <div ng-controller="LunchCheckController">
-              Message of Lunch Checker is:{{foodcount}}</div>
-         <div class="form-group">
-             <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
-         </div>
-         <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
-         </div>
-         <div id="error msg"></div>
-
-         <div class="form-group message">
-           <!-- Your message can go here. -->
-         </div>
-   </div>
-
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Demo</title>
+		<script src="Scripts/angular.min.js"></script>
+		<script>
+				var module = angular.module('DemoApp',[]);
+				module.controller('DemoController',function($scope){
+				//message
+				$scope.message="Welcome...";
+				//Click function
+				&scope.ShowOutput=function(food){
+					var fooditems =food.length;
+					if(fooditem>0 && fooditems<=3)
+					$scope.message="Enjoy...";
+					else if(fooditem>3)
+					$scope.message="Invalide entery";
+					else if(fooditem==0)
+					$scope.message="Enter food item";
+				}
+			});
+			</script>
+	</head>
+	<body>
+			<div data-ng-controller="DemoController"data-ng-app="DemoApp">
+				<form name="dashboardform" novalidate>
+					<input type="text" ng-list data-ng-model="food" placeholder="Enter Food"/>
+					<input type ="button" data-ng-click="ShowOutput(food)" value="Submit"/>
+					<br/><br/>
+					<label for="message" data-ng-bind="message"></label>
+				</form>
+			</div>
+	</body>
 </html>
