--- a/index.html
+++ b/index.html
@@ -1,59 +1,24 @@
-<!doctype html>
-<html lang="en" ng-app="ShoppingListCheckOff">
+<!DOCTYPE html>
+<html ng-app='MenuCategoriesApp'>
   <head>
-    <title>Shopping List Check Off</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-
-    <style>
-      .emptyMessage {
-        font-weight: bold;
-        color: red;
-        font-size: 1.2em;
-      }
-      li {
-        margin-bottom: 7px;
-        font-size: 1.2em;
-      }
-      li > button {
-        margin-left: 6px;
-      }
-      button > span {
-        color: green;
-      }
-    </style>
+    <meta charset="utf-8">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <title>Using $http Service</title>
   </head>
-<body >
-  <div class="container">
-  <h1>Shopping List Check Off</h1>
+  <body>
+    <h1>Using $http Service</h1>
 
-  <div class="row">
-
-    <!-- To Buy List -->
-    <div class="col-md-6" ng-controller="ToBuyController as toBuy">
-     <h2>To Buy:</h2>
-     <ol type="i">
-       <li ng-repeat="item in toBuy.items">
-         Buy {{ item.quantity }} {{ item.name }}
-         <button ng-click="toBuy.buyItem($index);" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-       </li>
-     </0l>
-     <div ng-if="toBuy.items.length === 0" class="emptyMessage">Everything is bought!</div>
+    <div ng-controller='MenuCategoriesController as menu'>
+      <h3>List of Menu Categories</h3>
+      <ul>
+        <li ng-repeat="category in menu.categories">
+          (<a href="" ng-click="menu.logMenuItems(category.short_name);">{{ category.short_name }}</a>)
+          {{ category.name }}
+        </li>
+      </ul>
     </div>
 
-    <!-- Already Bought List -->
-    <div class="col-md-6" ng-controller="AlreadyBoughtController as bought">
-     <h2>Already Bought:</h2>
-     <ol type="i">
-       <li ng-repeat="item in bought.items">
-          Bought {{ item.quantity }} {{ item.name }}
-       </li>
-     </ol>
-     <div ng-if="bought.items.length == 0" class="emptyMessage">Nothing bought yet.</div>
-    </div>
-  </div>
-  </div>
-  <script src="angular.min.js"></script>
-  <script src="app.js"></script>
-</body>
+  </body>
 </html>
