--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
-<!DOCTYPE html>
-<html ng-app='MenuCategoriesApp'>
-  <head>
-    <meta charset="utf-8">
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <title>Using $http Service</title>
-  </head>
-  <body>
-    <h1>Using $http Service</h1>
+<!doctype html>
+<html lang="en">
+ <head>
+   <title>Narrow Down Your Menu Choice</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="styles/bootstrap.min.css">
+   <link rel="stylesheet" href="styles/styles.css">
+ </head>
 
-    <div ng-controller='MenuCategoriesController as menu'>
-      <h3>List of Menu Categories</h3>
-      <ul>
-        <li ng-repeat="category in menu.categories">
-          (<a href="" ng-click="menu.logMenuItems(category.short_name);">{{ category.short_name }}</a>)
-          {{ category.name }}
-        </li>
-      </ul>
-    </div>
+ <body ng-app="NarrowItDownApp">
+   <div class="container" ng-controller="NarrowItDownController as list">
+      <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-  </body>
+      <div class="form-group">
+          <input type="text" placeholder="search term" class="form-control" ng-model="list.searchTerm">
+      </div>
+
+      <div class="form-group narrow-button">
+          <button class="btn btn-primary" ng-click="list.getMatchedMenuItems()">Narrow It Down For Me!</button>
+      </div>
+
+      <found-items found-items="list.found" on-remove="list.removeItem(index)"></found-items>
+
+      <div class="alert alert-warning" ng-if="list.warning">
+         {{list.warning}}
+      </div>
+
+   </div>
+   <script src="angular.min.js"></script>
+   <script src="app.js" ></script>
+ </body>
 </html>
